Allow MediaRouterDialogControllerImpl to re-set its reference to MRAction

When a tab that a dialog controller is associated with gets moved to another
window, we need to allow the dialog controller to update its reference to the
toolbar action (associated with a window). This fixes the bug in which the
icon gets pressed in a wrong window.

The comment for SetMediaRouterAction() is also updated, as it is okay for the
action to be null, and we expect it to become null when it gets removed from
the toolbar.

BUG=644972

Review-Url: https://codereview.chromium.org/2321163002
Cr-Commit-Position: refs/heads/master@{#417376}

Former-commit-id: 0a9c22d4d0a3c4335d69d00f28a8895d9583bab1